--- a/main.html
+++ b/main.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <h1>로고</h1>
+    <p>텍스트</p>
 </body>
 </html>
